--- a/SistemaLoja/Views/Shared/_Layout.cshtml
+++ b/SistemaLoja/Views/Shared/_Layout.cshtml
@@ -23,11 +23,18 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Início", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Produto", "Index", "Produtoes")</li>
-                    <li>@Html.ActionLink("Funcionário", "Index", "Funcionario")</li>
-                    <li>@Html.ActionLink("Fornecedor", "Index", "Fornecedor")</li>
 
-                    <li>@Html.ActionLink("Tipo de Documento", "Index", "TipoDocumento")</li>
+                        <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Loja<b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+
+                                    <li>@Html.ActionLink("Produto", "Index", "Produtoes")</li>
+                                    <li>@Html.ActionLink("Funcionário", "Index", "Funcionario")</li>
+                                    <li>@Html.ActionLink("Fornecedor", "Index", "Fornecedor")</li>
+                                    <li>@Html.ActionLink("Tipo de Documento", "Index", "TipoDocumento")</li>
+                                </ul>
+                        </li>
+
 
                     <li>@Html.ActionLink("Sobre", "About", "Home")</li>
                     <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
