--- a/SistemaLoja/Views/Produtoes/Delete.cshtml
+++ b/SistemaLoja/Views/Produtoes/Delete.cshtml
@@ -43,6 +43,14 @@
             @Html.DisplayFor(model => model.Quantidade)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Comentario)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Comentario)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
