--- a/SistemaLoja/Views/Shared/_Layout.cshtml
+++ b/SistemaLoja/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
 
                                     <li>@Html.ActionLink("Produto", "Index", "Produtoes")</li>
                                     <li>@Html.ActionLink("Funcionário", "Index", "Funcionario")</li>
+                                    <li>@Html.ActionLink("Pessoa", "Index", "Pessoa")</li>
                                     <li>@Html.ActionLink("Fornecedor", "Index", "Fornecedor")</li>
                                     <li>@Html.ActionLink("Tipo de Documento", "Index", "TipoDocumento")</li>
                                 </ul>
