--- a/SistemaLoja/Views/Produtoes/Details.cshtml
+++ b/SistemaLoja/Views/Produtoes/Details.cshtml
@@ -42,6 +42,14 @@
             @Html.DisplayFor(model => model.Quantidade)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Comentario)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Comentario)
+        </dd>
+
     </dl>
 </div>
 <p>
