--- a/SistemaLoja/Views/Produtoes/Index.cshtml
+++ b/SistemaLoja/Views/Produtoes/Index.cshtml
@@ -23,6 +23,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Quantidade)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Comentario)
+        </th>
         <th></th>
     </tr>
 
@@ -39,6 +42,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Quantidade)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Comentario)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
