--- a/SistemaLoja/Views/Shared/_Layout.cshtml
+++ b/SistemaLoja/Views/Shared/_Layout.cshtml
@@ -24,17 +24,25 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Início", "Index", "Home")</li>
 
-                        <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Loja<b class="caret"></b></a>
-                                <ul class="dropdown-menu">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Loja<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
 
-                                    <li>@Html.ActionLink("Produto", "Index", "Produtoes")</li>
-                                    <li>@Html.ActionLink("Funcionário", "Index", "Funcionario")</li>
-                                    <li>@Html.ActionLink("Pessoa", "Index", "Pessoa")</li>
-                                    <li>@Html.ActionLink("Fornecedor", "Index", "Fornecedor")</li>
-                                    <li>@Html.ActionLink("Tipo de Documento", "Index", "TipoDocumento")</li>
-                                </ul>
-                        </li>
+                            <li>@Html.ActionLink("Produto", "Index", "Produtoes")</li>
+                            <li>@Html.ActionLink("Funcionário", "Index", "Funcionario")</li>
+                            <li>@Html.ActionLink("Pessoa", "Index", "Pessoa")</li>
+                            <li>@Html.ActionLink("Fornecedor", "Index", "Fornecedor")</li>
+                            <li>@Html.ActionLink("Tipo de Documento", "Index", "TipoDocumento")</li>
+                        </ul>
+                    </li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Operações<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+
+                            <li>@Html.ActionLink("Nova Ordem", "NovaOrdem", "Ordens")</li>
+                        </ul>
+                    </li>
 
 
                     <li>@Html.ActionLink("Sobre", "About", "Home")</li>
